--- a/koha-tmpl/intranet-tmpl/default/en/acqui/basket.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/basket.tmpl
@@ -17,16 +17,21 @@
 			<!-- /TMPL_IF -->
 		</div>
 	<!-- /TMPL_UNLESS -->
+	<div id="bloc25" style="align:right">
+		<p><!-- TMPL_VAR name="name" --></p>
+		<p><!-- TMPL_VAR name="address1" --></p>
+		<p><!-- TMPL_VAR name="address2" --></p>
+		<p><!-- TMPL_VAR name="address3" --></p>
+		<p><!-- TMPL_VAR name="address4" --></p>
+	</div>
 	<div id="bloc100">
 	<h2 class="acquisition">Order</h2>
 	<!-- TMPL_IF name="books_loop" -->
 		<table>
 			<tr valign="top" bgcolor="#ffdf61">
 				<th class="acquisition doNotPrint">Order</th>
-				<th class="acquisition">Publisher<a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->&order=biblioitems.publishercode" class="acquisition doNotPrint">[order]</a></th>
-				<th class="acquisition">Isbn</th>
+				<th class="acquisition">Publisher<a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->&order=biblioitems.publishercode" class="acquisition">[order]</a></th>
 				<th class="acquisition">Title</th>
-				<th class="acquisition">Author</th>
 				<th class="acquisition">rrp</th>
 				<th class="acquisition doNotPrint">est</th>
 				<th class="acquisition">Qty</th>
@@ -39,20 +44,34 @@
 				<!-- /TMPL_IF -->
 			</tr>
 			<!-- TMPL_LOOP NAME="books_loop" -->
-				<tr valign="top" bgcolor="<!-- TMPL_VAR NAME="color" -->">
+				<!-- TMPL_IF name="odd" -->
+				<tr class="hilighted">
+				<!-- TMPL_ELSE -->
+				<tr>
+				<!-- /TMPL_IF -->
 					<td class="doNotPrint"><!-- TMPL_VAR NAME="ordernumber" --></td>
 					<td><!-- TMPL_VAR NAME="publishercode" --></td>
-					<td><!-- TMPL_VAR NAME="isbn" --></td>
 					<!-- TMPL_IF name="closedate" -->
-						<td><!-- TMPL_VAR NAME="title" --></td>
+						<td>
+							<b><!-- TMPL_VAR NAME="title" --></b><br/>
+								<!-- TMPL_VAR NAME="author" -->
+								<!-- TMPL_IF name="isbn"-->- <!-- TMPL_VAR name="isbn" --><!-- /TMPL_IF -->
+								<!-- TMPL_IF name="notes" --><p class="doNotPrint"><i><!--TMPL_VAR name="notes" --></i></p><!-- /TMPL_IF -->
+						</td>
 					<!-- TMPL_ELSE -->
-						<td><a href="newbiblio.pl?ordnum=<!-- TMPL_VAR NAME="ordernumber" -->&booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->"><!-- TMPL_VAR NAME="title" --></a></td>
+						<td>
+							<p>
+							<a href="newbiblio.pl?ordnum=<!-- TMPL_VAR NAME="ordernumber" -->&booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->"><!-- TMPL_VAR NAME="title" --></a><br/>
+								<!-- TMPL_VAR NAME="author" -->
+								<!-- TMPL_IF name="isbn"-->- <!-- TMPL_VAR name="isbn" --><!-- /TMPL_IF -->
+								<!-- TMPL_IF name="notes" --></p><p><i><!--TMPL_VAR name="notes" --></i><!-- /TMPL_IF -->
+							</p>
+						</td>
 					<!-- /TMPL_IF -->
-					<td><!-- TMPL_VAR NAME="author" --></td>
-					<td><!-- TMPL_VAR NAME="rrp" --></td>
-					<td class="doNotPrint"><!-- TMPL_VAR NAME="ecost" --></td>
-					<td><!-- TMPL_VAR NAME="quantity" --></td>
-					<td><!-- TMPL_VAR NAME="line_total" --></td>
+					<td class="number"><!-- TMPL_VAR NAME="rrp" --></td>
+					<td class="doNotPrint number"><!-- TMPL_VAR NAME="ecost" --></td>
+					<td class="number"><!-- TMPL_VAR NAME="quantity" --></td>
+					<td class="number"><!-- TMPL_VAR NAME="line_total" --></td>
 					<td class="doNotPrint"><!-- TMPL_VAR NAME="bookfundid" --></td>
 					<!-- TMPL_IF name="active" -->
 						<!-- TMPL_UNLESS name="closedate" -->
@@ -68,19 +87,39 @@
 			<input type="hidden" name="number" value=<!-- TMPL_VAR NAME="count" -->>
 			<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->">
 			<tr>
-				<td colspan="4" rowspan=3>
+				<td colspan="2" class="acquisition">
 					&nbsp;
 				</td>
-				<th colspan="2" class="acquisition">SubTotal</th>
-				<th class="acquisition"><!-- TMPL_VAR NAME="currency" --><!-- TMPL_VAR NAME="sub_total" --></th>
-			</tr>
-			<tr>
-				<th colspan="2" class="acquisition">GST</th>
-				<th class="acquisition"><!-- TMPL_VAR NAME="currency" --><!-- TMPL_VAR NAME="gist" --></th>
-			</tr>
-			<tr>
-				<th colspan="2" class="acquisition">TOTAL</th>
-				<th class="acquisition"><!-- TMPL_VAR NAME="currency" --><!-- TMPL_VAR NAME="grand_total" --></th>
+				<td class="acquisition number">
+					<p>Sub total</p>
+					<p>GST</p>
+					<p>TOTAL (<!-- TMPL_VAR NAME="currency" -->)</p>
+				</td>
+				<td class="acquisition number">
+					<p><!-- TMPL_VAR NAME="sub_total_est" --></p>
+					<p><!-- TMPL_VAR NAME="gist_est" --></p>
+					<p><!-- TMPL_VAR NAME="grand_total_est" --></p>
+				</td>
+				<td class="acquisition number">
+					<p><!-- TMPL_VAR NAME="sub_total" --></p>
+					<p><!-- TMPL_VAR NAME="gist" --></p>
+					<p><!-- TMPL_VAR NAME="grand_total" --></p>
+				</td>
+				<td class="acquisition">
+					<p><!-- TMPL_VAR name="qty_total" --></p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+				</td>
+				<td class="acquisition">
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+				</td>
+				<td class="acquisition">
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+				</td>
 			</tr>
 		</table>
 	<!-- TMPL_ELSE -->
