--- a/koha-tmpl/intranet-tmpl/default/en/circ/selectbranchprinter.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/circ/selectbranchprinter.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE Name="circulation-top.inc" -->
 
 <div id="mainbloc">
-<h1>Circulation: Select Printer and Branch Settings</h1>
+<h1 class="circulation">Circulation: Select Printer and Branch Settings</h1>
 
 <form method="post" action="/cgi-bin/koha/circ/circulation.pl">
 <p>
@@ -29,7 +29,7 @@
 	</select>
 <!-- /TMPL_IF --></p>
 <p><input type="hidden" name="setcookies" value="1">
-<input type="submit" value="Submit" type="changesettings" class="button"></p>
+<input type="submit" value="Submit" type="changesettings" class="button circulation"></p>
 </form>
 
 </div>
