--- a/koha-tmpl/opac-tmpl/css/en/opac-serial-issues.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-serial-issues.tmpl
@@ -1,13 +1,14 @@
 <!-- TMPL_INCLUDE NAME="opac-top.inc" -->
 <!--------------------------MAIN BODY OF PAGE-------------------------->
 <div id="mainbloc">
-<h1 class="catalogue">Issues for a subscription</h1>
-<a href="opac-detail.pl?bib=<!-- TMPL_VAR name="biblionumber" -->" class="button catalogue">Back to biblio</a>
-<form method="post" name="f">
-<!-- TMPL_LOOP name="subscription_LOOP" -->
-<div id="bloc60">
-	<h2 class="catalogue">Subscription information for <!-- TMPL_VAR name="bibliotitle" --></h2>
-		<p>It began on <b><!-- TMPL_VAR name="startdate" --></b> and is issued every
+	<h1 class="catalogue">Issues for a subscription</h1>
+	<a href="opac-detail.pl?bib=<!-- TMPL_VAR name="biblionumber" -->" class="button">Back to biblio</a>
+	<a class="button" href="opac-serial-issues.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->&selectview=full">Complete view</a>
+
+	<!-- TMPL_LOOP name="subscription_LOOP" -->
+	<div id="bloc60">
+		<h2 class="catalogue">Subscription information for <!-- TMPL_VAR name="bibliotitle" --></h2>
+		<p>It began on <b><!-- TMPL_VAR name="histstartdate" --></b> and is issued every
 		<b>
 		<!--TMPL_IF name="periodicity1" -->
 				day
@@ -43,45 +44,57 @@
 				2 years
 		<!-- /TMPL_IF -->
 		</b>
-		on
-		<b>
 		<!--TMPL_IF name="arrival1" -->
-			Monday
+			on <b>monday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival2" -->
-				Tuesday
+			on <b>tuesday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival3" -->
-				Wednesday
+			on <b>wednesday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival4" -->
-				Thursday
+			on <b>thursday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival5" -->
-				Friday
+			on <b>friday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival6" -->
-				Saturday
+			on <b>saturday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival7" -->
-				Sunday
+			on <b>sunday</b>
 		<!-- /TMPL_IF -->
-		</b>
 		for <b>
 			<!-- TMPL_IF name="numberlength" --><!-- TMPL_VAR name="numberlength" --> issues<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="weeklength" --><!-- TMPL_VAR name="weeklength" --> weeks<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="monthlength" --><!-- TMPL_VAR name="monthlength" --> months<!-- /TMPL_IF -->
 			</b>
-		since <b><!-- TMPl_VAR name="startdate" --></b>
 		</p>
+		<p>Last renewal of subscription was <b><!-- TMPl_VAR name="startdate" --></b></p>
+		<!-- TMPL_IF name="enddate" --><p><b>This subscription is now ended. The last issue was recieved on <!-- TMPL_VAR name="enddate" --></b></p><!-- /TMPL_IF name="enddate" -->
+	<!--TMPL_UNLESS Name=fullinfo -->
 		<p><!-- TMPL_VAR name="notes" --></p>
-	<!-- TMPL_IF name="opacnote" -->
-		<h2 class="catalogue">Issues summary</h2>
-		<p>
-			<!-- TMPL_VAR name="opacnote" -->
-		</p>
-	<!-- /TMPL_IF -->
-</div>
+		<!-- TMPL_IF name="opacnote" -->
+			<h2 class="catalogue">Issues summary</h2>
+			<p>
+				<!-- TMPL_VAR name="opacnote" -->
+			</p>
+		<!-- /TMPL_IF -->
+		<!-- TMPL_IF name="recievedlist" -->
+			<h2 class="catalogue">Recieved issues</h2>
+			<p>
+				<!-- TMPL_VAR name="recievedlist" -->
+			</p>
+		<!-- /TMPL_IF -->
+		<!-- TMPL_IF name="missinglist" -->
+			<h2 class="catalogue">Missing issues</h2>
+			<p>
+				<!-- TMPL_VAR name="missinglist" -->
+			</p>
+		<!-- /TMPL_IF -->
+	</div>
+	<!-- /TMPL_UNLESS -->
 <!-- /TMPL_LOOP -->
 </div>
 
