--- a/koha-tmpl/intranet-tmpl/default/en/acqui.simple/isbnsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui.simple/isbnsearch.tmpl
@@ -12,29 +12,45 @@
 	</div>
 	<div id="bloc25">
 		<h2 class="catalogue">Biblios in koha</h2>
-		<table>
-			<tr>
-				<th class="catalogue">Title</th>
-				<th class="catalogue">Author</th>
-				<th class="catalogue">&copy;</th>
-				<th class="catalogue">&nbsp;</th>
-				<!-- TMPL_UNLESS NAME="NOTMARC" -->
-					<th class="catalogue">&nbsp;</th>
-				<!-- /TMPL_UNLESS -->
-			</tr>
-			<!-- TMPL_IF name="loop" -->
-			<!-- TMPL_LOOP NAME="loop" -->
-				<!-- TMPL_IF NAME="toggle" --><tr><!-- TMPL_ELSE --><tr class="hilighted"><!-- /TMPL_IF -->
-					<td><!-- TMPL_VAR NAME="title" --></a>
-					<td><!-- TMPL_VAR NAME="author" --></td>
-					<td><!-- TMPL_VAR NAME="copyrightdate" --></td>
-					<!-- TMPL_IF NAME="NOTMARC" -->
-					<td><a href="additem-nomarc.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">Add items</a></td>
-					<!-- TMPL_ELSE -->
-					<td><a href="addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">Edit...</a></td>
+		<!-- TMPL_IF name="loop" -->
+			<div id="resultnumber">
+				<p>
+					<!-- TMPL_IF NAME="displayprev" --> 
+						<a class="resultnumber" href="isbnsearch.pl?startfrom=<!-- TMPL_VAR NAME="startfromprev" -->&amp;<!-- TMPL_LOOP NAME="searchdata" --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;type=intranet&amp;op=do_search">
+							&lt;&lt;Previous
+						</a>
 					<!-- /TMPL_IF -->
+					<!-- TMPL_LOOP NAME="numbers" -->
+						<!-- TMPL_IF NAME="highlight" -->
+							<span class="highlight"><!-- TMPL_VAR NAME="number" --></span>
+						<!-- TMPL_ELSE -->
+							<a class="resultnumber" href="isbnsearch.pl?startfrom=<!-- TMPL_VAR NAME="startfrom" -->&amp;<!-- TMPL_LOOP NAME="searchdata" --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;type=intranet&amp;op=do_search">
+								<!-- TMPL_VAR NAME="number" -->
+							</a>
+						<!-- /TMPL_IF -->
+					<!-- /TMPL_LOOP -->
+					<!-- TMPL_IF NAME="displaynext" -->
+						<a class="resultnumber" href="isbnsearch.pl?startfrom=<!-- TMPL_VAR NAME="startfromnext" -->&amp;<!-- TMPL_LOOP NAME="searchdata" --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->&amp;resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;type=intranet&amp;op=do_search">
+							Next&gt;&gt;
+						</a>
+					<!-- /TMPL_IF -->
+			</p>
+			<p class="resultcount">
+				<!-- TMPL_IF NAME="total" -->
+					Results <!-- TMPL_VAR NAME="from" --> to <!-- TMPL_VAR NAME="to" --> of <!-- TMPL_VAR NAME="total" -->
+				<!-- TMPL_ELSE -->
+					No results found.
+				<!-- /TMPL_IF -->
+			</p>
+		</div>
+			<table>
+				<tr>
+					<th class="catalogue">Title</th>
+					<th class="catalogue">Author</th>
+					<th class="catalogue">&copy;</th>
+					<th class="catalogue">&nbsp;</th>
 					<!-- TMPL_UNLESS NAME="NOTMARC" -->
-					<td><a href="addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&op=duplicate" class="button catalogue">Duplicate</a></td>
+						<th class="catalogue">&nbsp;</th>
 					<!-- /TMPL_UNLESS -->
 				</tr>
 				<!-- TMPL_LOOP NAME="loop" -->
@@ -85,15 +101,13 @@
 				<!-- TMPL_ELSE -->
 					No results found.
 				<!-- /TMPL_IF -->
-			<!-- /TMPL_LOOP -->
-			<!-- TMPL_IF name="displaynext" -->
-				<a href="isbnsearch.pl?offset=<!-- TMPL_VAR NAME="nextstartfrom" -->&amp;<!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="value" ESCAPE=URL -->">
-					<img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/next.gif" border="0">
-				</a>
-			<!-- TMPL_ELSE -->
-				<img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/placeholder.gif" border="0">
-			<!-- /TMPL_IF -->
-		</p>
+			</p>
+		</div>
+		<!-- TMPL_ELSE -->
+			<p>None</p>
+		<!-- /TMPL_IF -->
+	</div>
+	<div id="bloc25">
 		<h2 class="catalogue">Biblios in reservoir</h2>
 		<!-- TMPL_IF name="breeding_loop" -->
 			<table>
@@ -106,7 +120,7 @@
 					<th class="catalogue">&nbsp;</th>
 				</tr>
 					<!-- TMPL_LOOP NAME="breeding_loop" -->
-					<!-- TMPL_IF NAME="toggle" --><tr><!-- TMPL_ELSE --><tr class="hilighted"><!-- /TMPL_IF -->
+						<!-- TMPL_IF NAME="toggle" --><tr><!-- TMPL_ELSE --><tr class="hilighted"><!-- /TMPL_IF -->
 							<td><!-- TMPL_VAR NAME="title" --></a>
 							<td><!-- TMPL_VAR NAME="author" --></td>
 							<td><!-- TMPL_VAR NAME="isbn" --></td>
