--- a/koha-tmpl/intranet-tmpl/default/en/acqui/acqui-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/acqui-home.tmpl
@@ -4,11 +4,15 @@
 <h1 class="acquisition">Acquisitions</h1>
 <div id="bloc25">
 	<h2 class="acquisition">Start, receive, modify order</h2>
+	<!-- TMPL_IF name="nobudget" -->
+		<p class="problem">You must define a budget in parameters</p>
+	<!-- TMPL_ELSE -->
 		<form action="/cgi-bin/koha/acqui/order.pl" method="post">
 			Supplier name : <input type="text"  size="25"   name="supplier">
 			<input type="submit" class="button acquisition" value="OK">
 		</form>
 	<p>or <a href="histsearch.pl" class="button acquisition">Search order history</a></p>
+	<!-- /TMPL_IF -->
 </div>
 
 <!-- currencies-->
@@ -37,8 +41,10 @@
 
 <!-- showbudget-->
 <div id="bloc25">
-	<form action="/cgi-bin/koha/search.pl">
-		<h2 class="acquisition">budgets and bookfunds</h2>
+	<h2 class="acquisition">budgets and bookfunds</h2>
+	<!-- TMPL_IF name="nobudget" -->
+		<p class="problem">You must define a budget in parameters</p>
+	<!-- TMPL_ELSE -->
 		<table class="noborder">
 			<tr>
 				<th class="acquisition">Budgets</th>
@@ -67,7 +73,7 @@
 		<p>
 		Use your reload button to get the most recent figures. Committed figures are approximate only, as exchange rates will affect the amount actually paid.
 		</p>
-	</form>
+	<!-- /TMPL_IF -->
 </div>
 
 <div id="bloc25">
