--- a/koha-tmpl/intranet-tmpl/default/en/authorities/authorities.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/authorities/authorities.tmpl
@@ -3,7 +3,11 @@
 
 <div class="tabbed">
 	<form method="post" name="f">
-	<h1 class="authority">Authority number <!-- TMPL_VAR NAME="authid" --></h1>
+	<!-- TMPL_IF name="authid" -->
+		<h1 class="authority">Modify authority #<!-- TMPL_VAR NAME="authid" --> (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+	<!-- TMPL_ELSE -->
+		<h1 class="authority">Adding authority (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+	<!-- /TMPL_IF -->
 	<p>
 		<input type="hidden" name="op" value="add">
 		<input type="hidden" name="addfield_field">
@@ -20,25 +24,15 @@
 <br><br><br><br><br><br><br><br><br><br><br>
 <!-- TMPL_IF name="duplicateauthid" -->
 	<div class="problem">
-		<p>Duplicate suspected with <a href='javascript:openWindow("detail.pl?authid=<!-- TMPL_VAR name="duplicateauthnumber" -->&popup=1", "Duplicate Authority")' class="button authority"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
+		<p>Duplicate suspected with <a href='javascript:openWindow("detail.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->&popup=1", "Duplicate Authority")' class="button authority"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
 		<p>You must either :</p>
 		<ul>
-			<p><input type="checkbox" value=1 name="confirm_not_duplicate">confirm it's not a duplicate (and click on Add Auth again)</p>
+			<p><input type="checkbox" value=1 name="confirm_not_duplicate">confirm it's not a duplicate (and click on <input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority"> again)</p>
 			<p>Go to <a href="authorities.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->" >original authority</a></p>
 		</ul>
 	</div>
 <!-- /TMPL_IF -->
 
-<!-- TMPL_IF name="duplicateauthnumber" -->
-	<div class="problem">
-		<p>Duplicate suspected with <a href='javascript:openWindow("detail.pl?authid=<!-- TMPL_VAR name="duplicateauthnumber" -->&popup=1", "Duplicate Authority")' class="button authority"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
-		<p>You must either :</p>
-		<ul>
-			<p><input type="checkbox" value=1 name="confirm_not_duplicate">confirm it's not a duplicate (and click on Add Auth again)</p>
-			<p>Go to <a href="authorities.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->" >edit items</a> from this duplicate Authority</p>
-		</ul>
-	</div>
-<!-- /TMPL_IF -->
 <!-- TMPL_LOOP NAME="0XX" -->
 	<!-- TMPL_IF name="tag" -->
 		<p class="MARCtag">
@@ -184,8 +178,8 @@ function PopupZ3950() {
 }
 
 function AddField(field) {
-	document.forms[0].op.value = "addfield";
-	document.forms[0].addfield_field.value=field;
+	document.forms[1].op.value = "addfield";
+	document.forms[1].addfield_field.value=field;
 	document.f.submit();
 }
 </script>
