--- a/koha-tmpl/intranet-tmpl/default/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/catalogue/detail.tmpl
@@ -66,14 +66,15 @@
 				<!-- TMPL_IF name="pages" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="pages" -->
 				<!-- TMPL_IF name="size" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="size" --><br />
 				<!-- TMPL_IF name="isbn" --><label class="label100"><b>ISBN:</b> </label><!-- TMPL_VAR NAME="isbn" --><br /><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="issn" --><label class="label100"><b>ISSN:</b> </label><!-- TMPL_VAR NAME="issn" --><br /><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="seriestitle" --><label class="label100"><b>Collection:</b> </label><!-- TMPL_VAR NAME="seriestitle" --><br /><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="subjects" --><label class="label100"><b>Subject(s):</b> </label>
 					<!-- TMPL_LOOP name="subjects" -->
-						<a href="/cgi-bin/koha/opac-search.pl?op=do_search&marclist=bibliosubject.subject&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="subject" escape="HTML"-->"><!-- TMPL_VAR NAME="subject" --></a>, <!-- /TMPL_LOOP -->
+						<a href="/cgi-bin/koha/search.pl?type=intra&subjectitems=<!-- TMPL_VAR NAME="subject" escape="HTML"-->"><!-- TMPL_VAR NAME="subject" --></a>, <!-- /TMPL_LOOP -->
 					<br /><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="copyrightdate" --><label class="label100"><b>Year :</b> </label><!-- TMPL_VAR NAME="copyrightdate" --><br /><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="notes" --><label class="label100"><b>Notes:</b> </label><!-- TMPL_VAR NAME="notes" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="unititle" --><label class="label100"><b>Unititle:</b> </label><!-- TMPL_VAR NAME="unititle" --><br /><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="unititle" --><label class="label100"><b>Alt title:</b> </label><!-- TMPL_VAR NAME="unititle" --><br /><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="dewey" --><label class="label100"><b>Dewey:</b></label><!-- TMPL_VAR name="dewey" --><br /><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="url" --><label class="label100"><b>URL:</b> </label><a href="<!-- TMPL_VAR name="url" -->"><!-- TMPL_VAR NAME="url" --></a><br /><!-- /TMPL_IF -->
 				<label class="label100"><b>Item type : </b></label>
@@ -83,7 +84,9 @@
 						<!-- TMPL_VAR NAME="itemtype" -->
 					<!-- /TMPL_IF -->
 					<br/>
-				<b>Total Number of Items:</b> <!-- TMPL_VAR NAME="count" -->
+					<!-- TMPL_IF name="count" -->
+						<p><b>Total Number of Items:</b> <!-- TMPL_VAR NAME="count" --></p>
+					<!-- /TMPL_IF -->
 			</td>
 		</tr>
 	</table>
