--- a/koha-tmpl/intranet-tmpl/default/en/parameters/marctagstructure.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/marctagstructure.tmpl
@@ -111,46 +111,77 @@
 		<input type="submit" value="OK" class="button">
 	</form>
 <!-- /TMPL_IF -->
-
 <!-- ------------------------------------------------------------------------ -->
 <!-- TMPL_IF NAME="else" -->
-<div id="bloc25">
-<h2 class="parameters">Select a framework</h2>
-<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-	<select name="frameworkcode">
-		<option value="">Default</option>
-	<!-- TMPL_LOOP NAME="frameworkloop" -->
-		<option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF NAME="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR NAME="frameworktext" --></option>
-	<!-- /TMPL_LOOP -->
-	</select>
-	<input type="text" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->">
-	<input type="submit" value="OK" class="button">
-</form>
-<b>NOTE : if you change the link between a MARC subfield and a non-MARC field, ask your administrator to run misc/rebuildnonmarc.pl script.</b>
-</div>
-<div id="bloc100">
+	<div id="bloc25">
+	<h2 class="parameters">Select a framework</h2>
+	<form name="f" action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
+		<select name="frameworkcode">
+			<option value="">Default</option>
+		<!-- TMPL_LOOP NAME="frameworkloop" -->
+			<option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF NAME="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR NAME="frameworktext" --></option>
+		<!-- /TMPL_LOOP -->
+		</select>
+		<input type="text" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->">
+		<input type="submit" value="OK" class="button">
+		<p>
+		<i>Display only used Tags/Subfields</i> <input type="checkbox" name="select_display" value="True" <!-- TMPL_IF Name="select_display"-->checked<!--/TMPL_IF -->  OnChange="javascript:document.f.submit()">
+		</p>
+	</form>
+	<b>NOTE : if you change the link between a MARC subfield and a non-MARC field, ask your administrator to run misc/rebuildnonmarc.pl script.</b>
+	</div>
+	<div id="bloc100">
 	<table>
-	<tr>
-		<th>Tag</th>
-		<th>Lib</th>
-		<th>Repeatable</th>
-		<th>Mandatory</th>
-		<th>Authorised<br />value</th>
-		<th>Subfields</th>
-		<th>Edit</th>
-		<th>Delete</th>
-	<!-- TMPL_LOOP NAME="loop" -->
-	<tr valign="top" bgcolor="<!-- TMPL_VAR NAME="bgcolor" -->">
-		<td><b><!-- TMPL_VAR NAME="tagfield" --></b></td>
-		<td><!-- TMPL_VAR NAME="liblibrarian" --></td>
-		<td><!-- TMPL_IF NAME="repeatable" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
-		<td><!-- TMPL_IF NAME="mandatory" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
-		<td><!-- TMPL_VAR NAME="authorised_value" --></td>
-		<td><a href="/cgi-bin/koha/admin/marc_subfields_structure.pl?tagfield=<!-- TMPL_VAR NAME="tagfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkcode" -->" class="button">subfields</a></td>
-		<td><a href="<!-- TMPL_VAR NAME="script_name" -->?op=add_form&amp;searchfield=<!-- TMPL_VAR NAME="tagfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkcode" -->"><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png"  width="32" hspace="0" vspace="0" border="0"></a></td>
-		<td><a href="<!-- TMPL_VAR NAME="script_name" -->?op=delete_confirm&amp;searchfield=<!-- TMPL_VAR NAME="tagfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkdcode" -->"><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/edittrash.png" width="32" hspace="0" vspace="0" border="0"></a></td>
-	</tr>
-	<!-- /TMPL_LOOP -->
+		<tr>
+			<th>Tag</th>
+			<th>Lib</th>
+			<th>Repeatable</th>
+			<th>Mandatory</th>
+			<th>Authorised<br />value</th>
+			<th>Subfields</th>
+			<th>Edit</th>
+			<th>Delete</th>
+		<tr>
+	<!-- TMPL_IF NAME="select_display" -->
+		<!-- TMPL_LOOP NAME="loop" -->
+		<tr class="hilighted">
+			<td><b><!-- TMPL_VAR NAME="tagfield" --></b></td>
+			<td><!-- TMPL_VAR NAME="liblibrarian" --></td>
+			<td><!-- TMPL_IF NAME="repeatable" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+			<td><!-- TMPL_IF NAME="mandatory" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+			<td><!-- TMPL_VAR NAME="authorised_value" --></td>
+			<td><a href="<!-- TMPL_VAR NAME="subfield_link" -->" class="button">subfields</a></td>
+			<td><a href="<!-- TMPL_VAR NAME="edit" -->"><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png"  width="32" hspace="0" vspace="0" border="0"></a></td>
+			<td><a href="<!-- TMPL_VAR NAME="delete" -->"><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/edittrash.png" width="32" hspace="0" vspace="0" border="0"></a></td>
+		</tr>
+		<tr valign="top" bgcolor="<!-- TMPL_VAR NAME="bgcolor" -->">
+			<td>
+				&nbsp;
+			</td>
+			<td colspan=7 border=0>
+				<!-- TMPL_LOOP NAME="subfields" -->
+					<p><label>&nbsp;</label>
+							Tab:<!-- TMPL_VAR NAME="tab" --> | $<!-- TMPL_VAR NAME="tagsubfield" -->
+							<!-- TMPL_VAR NAME="liblibrarian" --> <!-- TMPL_IF NAME="kohafield" --><!-- TMPL_VAR NAME="kohafield" --><!--/TMPL_IF --><!-- TMPL_IF NAME="repeatable" -->, repeatable<!-- /TMPL_IF --><!-- TMPL_IF NAME="mandatory" -->, Mandatory<!-- /TMPL_IF --><!-- TMPL_IF NAME="seealso" -->, See <!-- TMPL_VAR name="seealso" --><!--/TMPL_IF --><!-- TMPL_IF NAME="authorised_value" -->, <!-- TMPL_VAR NAME="authorised_value" --><!--/TMPL_IF --><!-- TMPL_IF NAME="authtypecode" -->, <!-- TMPL_VAR NAME="authtypecode" --><!--/TMPL_IF --><!-- TMPL_IF NAME="value_builder" -->, <!-- TMPL_VAR NAME="value_builder" --><!--/TMPL_IF -->
+					</p>
+				<!-- /TMPL_LOOP -->
+			</td>
+		</tr>
+		<!-- /TMPL_LOOP -->
+	<!-- TMPL_ELSE -->
+		<!-- TMPL_LOOP NAME="loop" -->
+		<tr valign="top" bgcolor="<!-- TMPL_VAR NAME="bgcolor" -->">
+			<td><b><!-- TMPL_VAR NAME="tagfield" --></b></td>
+			<td><!-- TMPL_VAR NAME="liblibrarian" --></td>
+			<td><!-- TMPL_IF NAME="repeatable" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+			<td><!-- TMPL_IF NAME="mandatory" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+			<td><!-- TMPL_VAR NAME="authorised_value" --></td>
+			<td><a href="<!-- TMPL_VAR NAME="subfield_link" -->" class="button">subfields</a></td>
+			<td><a href="<!-- TMPL_VAR NAME="edit" -->"><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png"  width="32" hspace="0" vspace="0" border="0"></a></td>
+			<td><a href="<!-- TMPL_VAR NAME="delete" -->"><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/edittrash.png" width="32" hspace="0" vspace="0" border="0"></a></td>
+		</tr>
+		<!-- /TMPL_LOOP -->
+	<!--/TMPL_IF -->
 	<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
 	<input type="hidden" name="op" value="add_form">
 	</table>
@@ -159,17 +190,23 @@
 	<input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->">
 		<input type="submit" class="button" value="Add Tag" title="Add Tag" alt="Add Tag" >
 		<!-- TMPL_IF NAME="isprevpage" -->
-			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="prevpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkcode" -->">
+			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="prevpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkcode" --><!--TMPL_IF Name="select_display"-->&amp;select_display=True<!--/TMPL_IF -->">
 			<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1leftarrow.png" title="previous" alt="previous" border="0">
 			</a>
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="nextpage" -->
-			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="nextpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkcode" -->">
+			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="nextpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->&amp;frameworkcode=<!-- TMPL_VAR NAME="frameworkcode" --><!--TMPL_IF Name="select_display"-->&amp;select_display=True<!--/TMPL_IF -->">
 				<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1rightarrow.png" title="next" alt="next" border="0">
 			</a>
 		<!-- /TMPL_IF -->
-	</form>
+</form>
+<script language="javascript" type="text/javascript">
+	function ChangeDisplay(checkbox) {
+		window.
+	}
+</script>
 </div>
 <!-- /TMPL_IF -->
+
 </div>
 <!-- TMPL_INCLUDE NAME="parameters-bottom.inc" -->
