--- a/koha-tmpl/opac-tmpl/css/en/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/css/en/includes/opac.css
@@ -50,7 +50,10 @@ label {
 img {
 	border-width:0px;
 	text-align:left;
-	position:absolute;
+	display:inline;
+	float:left;
+	padding-left:10px;
+	padding-right:10px;
 }
 
 .relative { /* for images in relative position */
@@ -90,11 +93,9 @@ h1 {
 	background-color:transparent;
 	font-weight:bold;
 	font-size: 115%;
-	text-align : center;
 	vertical-align:top;
 	padding: 2px;
 	width:100%;
-	margin-left:70px;
 }
 
 /* subtitles. headers of blocks */
@@ -142,7 +143,7 @@ p.copyright {
 table {
 	border:1px solid #000000;
 	border-collapse:collapse;
-	width:90%;
+	position:static;
 }
 /* header */
 th {
@@ -154,13 +155,20 @@ th {
 	border-left:1px solid #000000;
 	border-bottom:1px solid #000000;
 	border-top:1px solid #000000;
-	padding:5px;
 }
 /* standard cell */
+
+tr {
+	display:table-row;
+	position:static;
+}
+
 td {
 	font-size:10pt;
 	border-left:1px solid #000000;
 	vertical-align:top;
+	position:static;
+	display:table-cell;
 }
 
 /* hilighted cell */
@@ -354,9 +362,14 @@ select:hover {
 	display:inline;
 }
 
-#menuline {
-	float:left;
+#title {
 	display:block;
+	margin-left:0px;
+}
+
+#menuline {
+	display:block;
+	margin-left:100px;
 }
 
 #bibliomenu {
@@ -368,22 +381,40 @@ select:hover {
 }
 
 /* a little spacer. should not be used */
-.spacer {
-	padding-left:20pt;
-	float:left;
-}
 .basketspacer {
 	padding-left:8pt;
 	float:left;
 }
 
+/* for SubscritptionHistory view  */
+div.tabsubs {
+	margin-left:150px;
+	position:inline;
+}
+
+div.tabsubs a {
+	font-size: small;
+	border: thin solid black;
+	margin-right: 2px;
+	padding: 10px 10px;
+	-moz-border-radius: 5px 5px 0px 0px;
+}
+
+div.tabsub {
+	background-color: #ACE6E6;
+	position:absolute;
+	visibility:hidden;
+	margin-left:150px;
+	margin-top:0px;
+border:4px;
+}
+
 /* for MARC view  */
 div.tabs {
-	width:10px;
-	position:absolute;
+	width:15px;
 	display:block;
-	margin-left:50px;
-	margin-top:150px;
+	margin-top:70px;
+	margin-left:40px;
 }
 
 div.tabs a {
@@ -395,14 +426,24 @@ div.tabs a {
 	-moz-border-radius: 5px 0px 0px 5px;
 }
 
+div.tabbloc {
+	position:absolute;
+	display:block;
+	top:140px;
+	left:62px;
+	margin-right:0px;
+	border: 1px solid black;
+	background-color:none;
+}
+
 div.tab {
 	background-color: #ACE6E6;
 	display: block;
 	visibility:hidden;
 	position:absolute;
-	margin-left:72px;
-	margin-top:150px;
-	margin-right:10%;
+	float:left;
+	margin-right:0px;
+	background-color:none;
 }
 
 .MARCtag { /* style for tag definition (700 - Statement of responsability) */
