--- a/koha-tmpl/opac-tmpl/css/en/opac-detail.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-detail.tmpl
@@ -64,11 +64,11 @@
 				<!-- TMPL_IF name="seriestitle" --><p><label><b>Collection:</b> </label><!-- TMPL_VAR NAME="seriestitle" --> <!-- TMPL_IF name="volume" -->vol. <!-- TMPL_VAR name="volume" --><!-- /TMPL_IF --></p><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="subjects" --><p><label><b>Subject(s):</b> </label></p>
 					<!-- TMPL_LOOP name="subjects" -->
-						<p><a href="/cgi-bin/koha/opac-search.pl?op=do_search&marclist=bibliosubject.subject&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="subject" escape="HTML"-->"><!-- TMPL_VAR NAME="subject" --></a>, </p> <!-- /TMPL_LOOP -->
+						<p><a href="/cgi-bin/koha/opac-search.pl?op=do_search&marclist=bibliosubject.subject&and_or=and&operator==&value=<!-- TMPL_VAR NAME="subject" escape="HTML"-->"><!-- TMPL_VAR NAME="subject" --></a>, </p> <!-- /TMPL_LOOP -->
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="copyrightdate" --><p><label><b>Year :</b> </label><!-- TMPL_VAR NAME="copyrightdate" --></p><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="notes" --><p><label><b>Notes:</b> </label><!-- TMPL_VAR NAME="notes" --></p><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="unititle" --><p><label><b>Unititle:</b> </label><!-- TMPL_VAR NAME="unititle" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="unititle" --><p><label><b>Alt title:</b> </label><!-- TMPL_VAR NAME="unititle" --></p><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="dewey" --><p><label><b>Dewey:</b></label><!-- TMPL_VAR name="dewey" --></p><!-- /TMPL_IF -->
 				<!-- TMPL_IF name="url" --><p><label><b>URL:</b> </label><a href="<!-- TMPL_VAR name="url" -->"><!-- TMPL_VAR NAME="url" --></a></p><!-- /TMPL_IF -->
 				<p><label><b>Item type : </b></label>
@@ -78,7 +78,9 @@
 						<!-- TMPL_VAR NAME="itemtype" -->
 					<!-- /TMPL_IF -->
 				</p>
-				<p><b>Total Number of Items:</b> <!-- TMPL_VAR NAME="count" --></p>
+				<!-- TMPL_IF name="count" -->
+					<p><b>Total Number of Items:</b> <!-- TMPL_VAR NAME="count" --></p>
+				<!-- /TMPL_IF -->
 			</td>
 		</tr>
 	</table>
@@ -157,45 +159,12 @@
 		<!-- /TMPL_LOOP -->
 	</table>
 	<!-- TMPL_IF name="subscriptionsnumber" -->
-		<div id="bloc25">
-		<p>This is a serial subscription (There are <!-- TMPL_VAR name="subscriptionsnumber" --> subscriptions associated with this title).</p> 
-		<!-- TMPL_LOOP Name="subscriptions" -->
-				<b class="catalogue"> Subscription #<!--TMPL_VAR Name="subscriptionid"--> </b>
-				<p><!--TMPL_VAR Name="subscriptionnotes"--> </p>
-				<!--TMPL_IF Name="latestserials"-->
-				<p> Here comes a list of the three latest issues related to this subscription :</p>
-				<table>
-				<!--TMPL_LOOP Name="latestserials"-->
-					<tr>
-						<td>
-							<!--TMPL_VAR Name="serialseq"-->
-						</td>
-						<td>
-							<!--TMPL_VAR Name="planneddate"-->
-						</td>
-						<td>
-							<!--TMPL_IF Name="status1"-->Waited
-							<!--TMPL_ELSE -->
-								<!-- TMPL_IF Name="status2"-->Arrived
-								<!--TMPL_ELSE -->
-									<!-- TMPL_IF Name="status3"-->Late
-									<!--TMPL_ELSE -->
-										<!-- TMPL_IF Name="status4"-->Missing
-										<!--TMPL_ELSE -->
-											<!-- TMPL_IF Name="status5"-->Not Issued
-											<!--/TMPL_IF-->
-										<!--/TMPL_IF-->
-									<!--/TMPL_IF-->
-								<!--/TMPL_IF-->
-							<!--/TMPL_IF-->
-						</td>
-					</tr>
-				<!--/TMPL_LOOP -->
-				</table>
-				<!-- /TMPL_IF -->
-		<!-- /TMPL_LOOP -->
-		<p> For more information : You can see <a href="/cgi-bin/koha/opac-serial-issues.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" title="Serial issues"> for Issues</a> we have and don't have</p>
-		</div>
+		<p>
+			This is a serial subscription (we have <!-- TMPL_VAR name="subscriptionsnumber" --> subscriptions). You can see which 
+				<a href="opac-serial-issues.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue" title="Serial issues">
+					Issues
+				</a> we have and don't have
+		</p>
 	<!-- /TMPL_IF -->
 	</div>
 </div>
