--- a/koha-tmpl/opac-tmpl/css/en/opac-user.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-user.tmpl
@@ -4,13 +4,18 @@
 	<div class="bloc20">
 		<h2>Are our records correct?</h2>
 		<p>Library Card: <!-- TMPL_VAR NAME="cardnumber" --> </p>
-		<p><!-- TMPL_VAR NAME="title" --> <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></p>
-		<p><!-- TMPL_VAR NAME="streetaddress" -->, <!-- TMPL_VAR NAME="zipcode" --> <!-- TMPL_VAR NAME="city" --></p>
-		<p><!-- TMPL_VAR NAME="physstreet" -->, <!-- TMPL_VAR NAME="homezipcode" --> <!-- TMPL_VAR NAME="streetcity" --></p>
-		<p><!-- TMPL_VAR NAME="phone" --> <!-- TMPL_IF name="phone" -->(hm)<!-- /TMPL_IF --></p>
-		<p><!-- TMPL_VAR NAME="faxnumber" --> <!-- TMPL_IF name="fawnumber" -->(wk)<!-- /TMPL_IF --></p>
+		<p><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" -->
+		<p>Work address: <!-- TMPL_VAR NAME="streetaddress" -->, <!-- TMPL_VAR NAME="city" --></p>
+		<p>Home address: <!-- TMPL_VAR name='physstreet' --></p>
+		<p><!-- TMPL_IF name="phone" -->Home phone: <!-- TMPL_VAR NAME="phone" --><!-- /TMPL_IF --></p>
+		<p><!-- TMPL_IF name="faxnumber" -->Fax: <!-- TMPL_VAR NAME="faxnumber" --><!-- /TMPL_IF --></p>
 		<p><!-- TMPL_VAR NAME="emailaddress" --></p>
 		<p><a href="/cgi-bin/koha/opac-userupdate.pl" class="button">Update Record</a></p>
+		<!-- TMPL_IF name="textmessaging"-->
+			<h2>Message from the library</h2>
+			<!-- TMPL_VAR name="textmessaging" -->
+		<!-- /TMPL_IF -->
+
 	</div>
 	<!-- TMPL_IF NAME="amountoverfive" -->
 	<div class="bloc20">
@@ -35,70 +40,79 @@
 
 <!-- /TMPL_LOOP -->
 
-<!-- TMPL_IF NAME="waiting_count" -->
-<div class="bloc60">
-	<h2>You have reserved items waiting:</h2>
-	<ul>
-		<!-- TMPL_LOOP NAME="WAITING" -->
-			<li><!-- TMPL_VAR NAME="btitle" -->, pick up at: <b><!-- TMPL_VAR NAME="branch" --></b></li>
-		<!-- /TMPL_LOOP -->
-	</ul>
-</div>
-<!-- /TMPL_IF -->
+	<!-- TMPL_IF NAME="waiting_count" -->
+	<div class="bloc60">
+		<h2>You have reserved items waiting:</h2>
+		<ul>
+			<!-- TMPL_LOOP NAME="WAITING" -->
+				<li><!-- TMPL_VAR NAME="btitle" -->, pick up at: <b><!-- TMPL_VAR NAME="branch" --></b></li>
+			<!-- /TMPL_LOOP -->
+		</ul>
+	</div>
+	<!-- /TMPL_IF -->
 
-<div class="bloc60">
-	<!-- TMPL_IF NAME="issues_count" -->
-		<h2>You have <b><!-- TMPL_VAR NAME="issues_count" --></b> items currently issued.</h2>
-		<table>
+	<div class="bloc60">
+		<!-- TMPL_IF NAME="issues_count" -->
+			<h2>You have <b><!-- TMPL_VAR NAME="issues_count" --></b> items currently issued.</h2>
+			<table>
+				<tr>
+					<th>Title</th>
+					<th>Author</th>
+					<th>Due date</th>
+					<th>Itemtype</th>
+					<th>Barcode</th>
+					<th>Charges</th>
+					<th>Renewable</th>
+				</tr>
+				<!-- TMPL_LOOP NAME="ISSUES" -->
+					<!-- TMPL_IF name="overdue"-->
+						<tr>
+							<td><!-- TMPL_VAR NAME="title" --></td>
+							<td><!-- TMPL_VAR NAME="author" --></td>
+							<td><b>OVERDUE <!-- TMPL_VAR NAME="date_due" --></b></td>
+							<td><!-- TMPL_VAR NAME="itemtype" --></td>
+							<td><!-- TMPL_VAR NAME="barcode" --></td>
+							<td><!-- TMPL_IF NAME="charges" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+							<td><!-- TMPL_IF NAME="status" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+						</tr>
+					<!-- TMPL_ELSE -->
+						<tr>
+							<td><!-- TMPL_VAR NAME="title" --></td>
+							<td><!-- TMPL_VAR NAME="author" --></td>
+							<td><!-- TMPL_VAR NAME="date_due" --></td>
+							<td><!-- TMPL_VAR NAME="itemtype" --></td>
+							<td><!-- TMPL_VAR NAME="barcode" --></td>
+							<td><!-- TMPL_IF NAME="charges" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+							<td><!-- TMPL_IF NAME="status" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
+						</tr>
+					<!-- /TMPL_IF -->
+				<!-- /TMPL_LOOP -->
+			</table>
+		<!-- TMPL_ELSE -->
+			<h2>You have no items on issue.</h2>
+		<!-- /TMPL_IF -->
+	</div>
+
+	<!-- TMPL_IF NAME="reserves_count" -->
+	<div class="bloc60">
+		<h2>You have <b><!-- TMPL_VAR NAME="reserves_count" --></b> items currently reserved.</h2>
+		<table cellspacing="0" align="center">
 			<tr>
 				<th>Title</th>
 				<th>Author</th>
-				<th>Due date</th>
-				<th>Itemtype</th>
-				<th>Barcode</th>
-				<th>Charges</th>
-				<th>Renewable</th>
+				<th>Reserve date</th>
 			</tr>
-			<!-- TMPL_LOOP NAME="ISSUES" -->
-					<tr>
-						<!-- TMPL_IF name="overdue"--><td class="problem"><!--TMPL_ELSE--><td><!--/TMPL_IF-->
-							<!-- TMPL_VAR NAME="title" --></td>
-						<!-- TMPL_IF name="overdue"--><td class="problem"><!--TMPL_ELSE--><td><!--/TMPL_IF-->
-							<!-- TMPL_VAR NAME="author" --></td>
-						<!-- TMPL_IF name="overdue"--><td class="problem"><!--TMPL_ELSE--><td><!--/TMPL_IF-->
-							<!-- TMPL_VAR NAME="date_due" --></td>
-						<td><!-- TMPL_VAR NAME="itemtype" --></td>
-						<td><!-- TMPL_VAR NAME="barcode" --></td>
-						<td><!-- TMPL_IF NAME="charges" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
-						<td><!-- TMPL_IF NAME="status" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
-					</tr>
+			<!-- TMPL_LOOP NAME="RESERVES" -->
+				<tr valign="top">
+				<td><!-- TMPL_VAR NAME="btitle" --></td>
+				<td><!-- TMPL_VAR NAME="author" --></td>
+				<td><!-- TMPL_VAR NAME="reservedate" --></td>
+				</tr>
 			<!-- /TMPL_LOOP -->
 		</table>
-	<!-- TMPL_ELSE -->
-		<h2>You have no items on issue.</h2>
+		<br />
+	</div>
 	<!-- /TMPL_IF -->
-</div>
-
-<!-- TMPL_IF NAME="reserves_count" -->
-<div class="bloc60">
-	<h2>You have <b><!-- TMPL_VAR NAME="reserves_count" --></b> items currently reserved.</h2>
-	<table cellspacing="0" align="center">
-		<tr>
-			<th>Title</th>
-			<th>Author</th>
-			<th>Reserve date</th>
-		</tr>
-		<!-- TMPL_LOOP NAME="RESERVES" -->
-			<tr valign="top">
-			<td><!-- TMPL_VAR NAME="btitle" --></td>
-			<td><!-- TMPL_VAR NAME="author" --></td>
-			<td><!-- TMPL_VAR NAME="reservedate" --></td>
-			</tr>
-		<!-- /TMPL_LOOP -->
-	</table>
-	<br />
-</div>
-<!-- /TMPL_IF -->
 </div>
 <!-- TMPL_INCLUDE NAME="opac-bottom.inc" -->
 
