--- a/koha-tmpl/intranet-tmpl/default/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/intranet-main.tmpl
@@ -42,6 +42,15 @@
 			if (!(layer = MM_findObj('Hint' + item))) return;
 			layer.style.visibility = 'hidden';
 		}
+		function addauthority() {
+			X = document.forms["f"].authtype.value;
+			window.location="/cgi-bin/koha/authorities/authorities.pl?authtypecode="+X;
+		}
+		function searchauthority() {
+			X = document.forms["f"].authtype2.value;
+			Y = document.forms["f"].value.value;
+			window.location="/cgi-bin/koha/authorities/authorities-home.pl?op=do_search&type=intranet&authtypecode="+X+"&value="+Y+"&marclist=&and_or=and&excluding=&operator=contains";
+		}
 	</script>
 	<script language="javascript" type="text/javascript">
 	var blnOk=true;
@@ -114,14 +123,83 @@
 		<div id="Hint3" class="hint">
 			<h1 class="acquisition">Acquisitions</h1>
 			Order items, receive orders, set budgets...
+			<form action="/cgi-bin/koha/acqui/order.pl" method="post">
+			Supplier name : <input type="text"  size="25"   name="supplier">
+			<input type="submit" class="button acquisition" value="OK">
+			</form>
+			<p>or <a href="histsearch.pl" class="button acquisition">Search order history</a></p>
+			
 		</div>
 		<div id="Hint4" class="hint">
 			<h1 class="reports">Reports</h1>
 			All the system reports
+			<div id="bloc25">
+			<h2 class="reports">Stats</h2>
+			<ul>
+			<li>on catalogue
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/reports/inventory.pl">Inventory/Stocktaking</a></p>
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/reports/manager.pl?report_name=itemtypes">Catalogue by itemtype</a></p>
+			<li>on issues
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/stats.pl?time=yesterday">Till Reconcipation:</a> Daily Report (yesterday)</p>
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/stats.pl?time=today">Till Reconcipation:</a> Daily Report (today)</p>
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/overdue.pl">Overdue items</a></p>
+			</ul>
+			</div>
+			<div id="bloc25">
+			<h2 class="reports">Stat wizards</h2>
+			<table>
+			<tr>
+			<td class="little"><a class="reports little" href="/cgi-bin/koha/reports/acquisitions_stats.pl">Acquisitions</a></td>
+			<td class="little"><a class="reports little" href="/cgi-bin/koha/reports/borrowers_stats.pl">Borrowers</a></td>
+			</tr>
+			<tr>
+			<td class="little"><a class="reports little" href="/cgi-bin/koha/reports/catalogue_stats.pl">Catalogue</a></td>
+			<td class="little"><a class="reports little" href="/cgi-bin/koha/reports/issues_stats.pl">Circulation</a></td>
+			</tr>
+			</table>
+			</div>
+			<div id="bloc25">
+			<h2 class="reports">Top Lists</h2>
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/reports/bor_issues_top.pl">Most issuing Borrowers</a></p>
+				<p class="little"><a class="reports little" href="/cgi-bin/koha/reports/cat_issues_top.pl">Most issued items</a></p>
+			</div>
 		</div>
+		
 		<div id="Hint5" class="hint">
-			<h1 class="reports">Authorities</h1>
+			<h1 class="authority">Authorities</h1>
 			Authorities management &amp; searches
+			<form name="f" >
+				<h2 >
+					<select name="authtype">
+					<!-- TMPL_LOOP NAME="authtypesloop" -->
+						<option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->>
+							<!-- TMPL_VAR NAME="authtypetext" -->
+						</option>
+					<!-- /TMPL_LOOP -->
+					</select>
+					<a href="javascript:addauthority()" class="authority">Add Authority</a>
+				</h2>
+				<h2>Search 
+				<input type="text" name="value" value="<!-- TMPL_VAR NAME="value" -->">
+				in
+					<select name="authtype2">
+					<!-- TMPL_LOOP NAME="authtypesloop" -->
+						<option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->>
+							<!-- TMPL_VAR NAME="authtypetext" -->
+						</option>
+					<!-- /TMPL_LOOP -->
+					</select>
+				</h2>
+				<input type="hidden" name="marclist" value="">
+				<input type="hidden" name="and_or" value="and">
+				<input type="hidden" name="excluding" value="">
+				<input type="hidden" name="operator" value="contains">
+				<input type="hidden" name="op" value="do_search">
+				<img src="<!-- TMPL_VAR NAME="themelang" -->/images/holder.gif" width="1" height="12" alt="" hspace="0" vspace="0">
+				<a href="javascript:searchauthority()" class="authority">
+					Search
+				</a>
+			</form>
 		</div>
 		<div id="Hint6" class="hint">
 			<h1 class="parameters">Parameters</h1>
@@ -132,6 +210,22 @@
 		<div id="Hint7" class="hint">
 			<h1 class="circulation">Circulation</h1>
 			Work at the front desk on Issues and returns using only a barcode reader and a mouse
+				<h2 class="circulation">
+					Issue
+				</h2>
+				<form method="post" action="/cgi-bin/koha/circ/circulation.pl">
+					<p>Enter borrower card number or partial last name <input name="findborrower">
+					<input type="submit" value="OK" class="button circulation"></p>
+				</form>
+				<h2 class="circulation">
+					Return
+				</h2>
+				<form method="post" action="/cgi-bin/koha/circ/returns.pl">
+				<p>Enter Book Barcode</p>
+				<label class="label20">Item Barcode:</label><input name="barcode" size="10">
+				<input type="submit" value="OK" class="button circulation">
+				</form>
+
 		</div>
 <!-- MAIN MENU -->
 		<a href="/cgi-bin/koha/loadmodules.pl?module=acquisitions" class="acquisition" onMouseOver="SetOn(3);">Acquisitions</a><br/>
