Adding line counter

--- a/koha-tmpl/intranet-tmpl/default/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/histsearch.tmpl
@@ -108,7 +108,7 @@
 		<!-- TMPL_LOOP NAME="suggestions_loop" -->
 			<tr>
 				<td>
-					&nbsp;
+					<!-- TMPL_VAR Name="count"-->
 				</td>
 				<td>
 					<a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->"><!-- TMPL_VAR NAME="title" --></a>
