Online Help on Scrolling_list building for sort1 and sort2. Minor Bug Fix for newbiblio.pl : Bsort becomes Asort

--- a/koha-tmpl/intranet-tmpl/default/en/help/members/memberentry.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/help/members/memberentry.tmpl
@@ -1,5 +1,8 @@
 <!-- TMPL_INCLUDE name="help-top.inc" -->
 <h1>Add member help</h1>
+
+<p>sort1 and sort2 may now be related to a list of Authorized Values. All you have to do is define a Bsort1 or Bsort2 category of authorised values and enter the desired values into these categories. You will then be able to use them through Add/Modify Member Page</p>
+
 <h2>Add Member, person</h2>
 <p>This is the form for adding a new single member to the database. There is also a form for organisations, such as other libraries and non profit organisations you might lend to. You should use the Add Organisation tab at the top of the Member page for that.</p>
 <p>Every field with an asterisk must be filled out, or you will get an error, and the record will not be added to the database.</p>
