Closing suggest window after selection

--- a/koha-tmpl/intranet-tmpl/default/en/search.marc/suggest.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/search.marc/suggest.tmpl
@@ -44,7 +44,7 @@
 //				strQuery += "&isbn="+document.forms[0].field_value[i].value;
 //			}
 //			opener.document.location= "../acqui.simple/addbiblio.pl?z3950=1&oldbiblionumber=<!-- TMPL_VAR NAME="oldbiblionumber" -->&breedingid="+GetThisOne;
-//			self.close();
+			self.close();
 //			return false;
 		}
 	}
