--- a/koha-tmpl/opac-tmpl/css/en/opac-detail.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-detail.tmpl
@@ -192,7 +192,7 @@ Subjects:<br>
 <!-- /TMPL_LOOP --><br>
 Itemtype:<br>
 <input type="checkbox" name="itemtypeswanted" value="<!-- TMPL_VAR NAME="itemtype" -->">
-!-- TMPL_IF name="description" -->
+<!-- TMPL_IF name="description" -->
 <!-- TMPL_VAR name="description" -->
 <!-- TMPL_ELSE -->
 <!-- TMPL_VAR NAME="itemtype" -->
